--- a/SolvationExtensions/SolvationExtensions.csproj
+++ b/SolvationExtensions/SolvationExtensions.csproj
@@ -5,6 +5,17 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Solvation Extensions</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>Some generic extensions used at Solvation AB</Description>
+    <Copyright>Solvation AB</Copyright>
+    <PackageTags>generic extensions</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
